# weixin-404-store

./: .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: docker-publish.yml
src/: env.py  main.py
src/model/: __init__.py  key_value.py  message.py
src/weixin/: mp.py  work.py
static/: index.html
